--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "biopython>=1.85",
     "biotite>=1.4.0",
     "gemmi>=0.7.3",
     "jupyter>=1.1.1",
