--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "openmm>=8.4.0",
     "pandas>=2.3.3",
     "py3dmol>=2.5.3",
+    "pyteomics>=4.7.5",
     "python-pptx>=1.0.2",
     "rdkit>=2025.3.6",
     "scikit-learn>=1.7.2",
