--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ requires-python = ">=3.13"
 dependencies = [
     "biopython>=1.85",
     "biotite>=1.4.0",
+    "clustalo>=0.1.2",
     "gemmi>=0.7.3",
     "GEOparse>=1.0.0",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.6",
+    "muscle>=0.0.4",
     "muscle3>=0.8.0",
     "pandas>=2.3.3",
     "py3dmol>=2.5.3",
