--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "biopython>=1.85",
     "biotite>=1.4.0",
+    "cooler>=0.10.4",
     "gemmi>=0.7.3",
     "GEOparse>=1.0.0",
     "jupyter>=1.1.1",
